@@ -22,6 +22,7 @@ import com.cburch.logisim.instance.StdAttr;
 import com.cburch.logisim.proj.Project;
 import com.cburch.logisim.std.memory.Register;
 import com.cburch.logisim.util.AlphanumComparator;
+import com.cburch.logisim.util.CollectionUtil;
 import com.cburch.logisim.util.LocaleListener;
 import java.awt.Color;
 import java.awt.Font;
@@ -98,7 +99,7 @@ public class RegTabContent extends JScrollPane implements LocaleListener, Simula
     y++;
 
     if (!registers.isEmpty()) {
-      final var keys = registers.keySet().stream().sorted(new AlphanumComparator()).collect(Collectors.toList());
+      final var keys = registers.keySet().stream().sorted(new AlphanumComparator()).toList();
       for (final var key : keys) {
         constraints.gridy = y;
         constraints.gridx = 0;
@@ -110,6 +111,7 @@ public class RegTabContent extends JScrollPane implements LocaleListener, Simula
         constraints.gridx++;
         final var selReg = registers.get(key);
         var mainCircState = proj.getCircuitState();
+        if (mainCircState == null) continue;
         while (mainCircState.getParentState() != null) { // Get the main circuit
           mainCircState = mainCircState.getParentState();
         }
@@ -148,7 +150,7 @@ public class RegTabContent extends JScrollPane implements LocaleListener, Simula
       return cs.getValue(loc);
     }
 
-    if (cs.getSubStates() != null && !cs.getSubStates().isEmpty()) {
+    if (CollectionUtil.isNotEmpty(cs.getSubStates())) {
       for (final var cst : cs.getSubStates()) {
         final var ret = findVal(cst, cn, loc);
         if (ret != null) return ret;
